--- a/MAIN/style.css
+++ b/MAIN/style.css
@@ -1,25 +1,25 @@
 /* main.css */
 
 /* Стили для index.html */
-.user-container {
+.user-container {  /*создан в index.html*/
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
     margin-top: 20px;
 }
 
-.user {
+.user { /*создается в script.js*/
     background-color: #f0f0f0;
     padding: 20px;
     margin-bottom: 20px;
     width: 45%;
 }
 
-.user:hover {
+.user:hover { /*создается в script.js*/
     background-color: #e0e0e0;
 }
 
-.user-details-link {
+.user-details-link { /*создается в script.js*/
     display: block;
     margin-top: 10px;
     text-align: center;
@@ -29,18 +29,18 @@
 
 /* Стили для user-details.html */
 #userDetailsContainer,
-#userPostsContainer {
+#userPostsContainer { /*создан в user-details.html*/
     background-color: #f0f0f0;
     padding: 20px;
     margin: 20px auto;
     width: 70%;
 }
 
-#userPostsContainer {
+#userPostsContainer { /*создан в user-details.html*/
     text-align: center;
 }
 
-.post-link {
+.post-link { /*создается в script.js*/
     display: block;
     margin-bottom: 10px;
     text-decoration: none;
@@ -48,70 +48,25 @@
 }
 
 
-/*.user-details {*/
-/*    background-color: #f0f0f0;*/
-/*    padding: 20px;*/
-/*    margin: 20px auto;*/
-/*    width: 70%;*/
-/*}*/
-
-/*.user-details p {*/
-/*    margin-bottom: 10px;*/
-/*}*/
-
-/*.postDetailsContainer {*/
-/*    margin-top: 20px;*/
-/*    text-align: center;*/
-/*}*/
-
-/*.posts-link {*/
-/*    display: inline-block;*/
-/*    padding: 10px 20px;*/
-/*    background-color: #007bff;*/
-/*    color: white;*/
-/*    text-decoration: none;*/
-/*    border-radius: 5px;*/
-/*}*/
-
-/* Стили для post-details.html */
-#postDetailsContainer,
-#commentsContainer {
+.user-details {
     background-color: #f0f0f0;
     padding: 20px;
     margin: 20px auto;
     width: 70%;
 }
 
-.comment {
+
+/* Стили для post-details.html */
+#postDetailsContainer,
+#commentsContainer { /*создан в post-details.html*/
+    background-color: #f0f0f0;
+    padding: 20px;
+    margin: 20px auto;
+    width: 70%;
+}
+
+.comment { /*создается в script.js*/
     background-color: #f9f9f9;
     padding: 10px;
     margin-bottom: 10px;
 }
-
-/*.post-info {*/
-/*    background-color: #f0f0f0;*/
-/*    padding: 20px;*/
-/*    margin: 20px auto;*/
-/*    width: 70%;*/
-/*}*/
-
-/*.comments-container {*/
-/*    margin-top: 20px;*/
-/*}*/
-
-/*.comment {*/
-/*    background-color: #f9f9f9;*/
-/*    padding: 10px;*/
-/*    margin-bottom: 10px;*/
-/*}*/
-
-
-/*!* доп анимация *!*/
-/*.fade-in {*/
-/*    opacity: 0;*/
-/*    transition: opacity 0.5s ease-in-out;*/
-/*}*/
-
-/*.fade-in.active {*/
-/*    opacity: 1;*/
-/*}*/
